--- a/Questions/BTS 1 - DST 1 - Sujet A.tex
+++ b/Questions/BTS 1 - DST 1 - Sujet A.tex
@@ -9,13 +9,16 @@
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{bbold}
+\usepackage{xcolor}
 \pagestyle{empty}
 \begin{document}
 
 \section*{Contrôle de Mathématiques}
 
-\let\MauvaiseReponse\null
-\let\BonneReponse\null
+%\let\MauvaiseReponse\null
+%\let\BonneReponse\null
+\def\MauvaiseReponse#1\par{\textcolor{red}{#1}}
+\def\BonneReponse#1\par{\textcolor{green}{#1}}
 
 {\bf Merci de répondre sur la grille fournie et de ne pas oublier de traiter les deux questions au verso en évitant de sortir des cadres. Vous prendrez soin de rendre le sujet avec cette grille.}
 \vspace{2em}
@@ -30,25 +33,36 @@
 
 
 
+
 \item L'ensemble des solutions de l'inéquation $-2 x+2<1$ est :
 \begin{enumerate}
+
 \item\BonneReponse $]\frac{1}{2},+\infty[$
+
 \item\MauvaiseReponse $\mathbb{R}$
+
 \item\MauvaiseReponse $]-\infty, -\frac{1}{2}]$
+
 \end{enumerate}
+
 
 
 \item L'ensemble des solutions de l'inéquation $-2x+8 \geqslant 9$
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $\mathbb{R}$
 
 
+
 \item\BonneReponse $]-\infty,-\frac{1}{2}]$
+
 \item\MauvaiseReponse $[-\frac{1}{2},+\infty[$
 
+
 \end{enumerate}
+
 
 
 
@@ -58,13 +72,18 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse est solution de l'équation $x+2=0$
+
 \item\MauvaiseReponse est solution de l'équation $2x+1=0$
+
 
 
 \item\BonneReponse est solution de l'inéquation $3x+7>0$
 
+
 \end{enumerate}
+
 
 
 
@@ -73,40 +92,56 @@
 \begin{enumerate}
 
 
+
 \item\BonneReponse est solution de l'équation $x^{3}-5x=0$
 
+
 \item\MauvaiseReponse est solution de l'inéquation $-5x+2>0$
+
 \item\MauvaiseReponse est solution de l'équation $x^{2}+5=0$
+
 
 \end{enumerate}
 
 \newpage
+
 
 \item Le nombre $\frac{1}{8}$
 
 \begin{enumerate}
 
 
+
 \item\BonneReponse est solution de l'équation $8x-1=0$
+
 \item\MauvaiseReponse est solution de l'équation $7x+1=0$
+
 
 \item\MauvaiseReponse est solution de l'inéquation $2x+7<0$
 
+
 \end{enumerate}
 
 
 
-\item Le couple solution du système $\left\{\begin{array}{c}5x+5y=10 \\ x-8y=-34\end{array}\right.$ est
+
+\item Le couple solution du système $\left\{\begin{array}{c}5x+5y=10 \\ x-8y=-34
+\end{array}\right.$ est
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $(4;4)$
 
+
 \item\BonneReponse $(-2 ;4)$
+
 \item\MauvaiseReponse $(2 ; -2)$
 
 
+
 \end{enumerate}
+
 
 
 
@@ -117,13 +152,18 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $u_{3}=3$
+
 
 \item\BonneReponse $u_{3}=\frac{25}{9}$
 
+
 \item\MauvaiseReponse $u_{3} =\frac{79}{9}$
 
+
 \end{enumerate}
+
 
 
 
@@ -132,27 +172,37 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $u_{3}=4$
+
 
 \item\MauvaiseReponse $u_{3}=32$
 
+
 \item\BonneReponse $u_{3}=95$
+
 
 \end{enumerate}
 
 \newpage
 
+
 \item $v$ est la suite définie par $v_{0}=-2$ et la relation de récurrence\\ $v_{n+1}=5n-v_{n}$, alors :
 
 \begin{enumerate}
 
+
 \item\BonneReponse $v_{2}=3$
+
 
 \item\MauvaiseReponse $v_{2}=-5$
 
+
 \item\MauvaiseReponse $v_{2}=6$
 
+
 \end{enumerate}
+
 
 
 
@@ -164,13 +214,18 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $u_{3}=-4$
+
 
 \item\MauvaiseReponse $u_{3}=-\frac{11}{2}$
 
+
 \item\BonneReponse $u_{3}=-\frac{25}{4}$
 
+
 \end{enumerate}
+
 
 
 
@@ -178,13 +233,18 @@
 
 \begin{enumerate}
 
+
 \item\BonneReponse $\frac{135}{64}$
+
 
 \item\MauvaiseReponse $\frac{5}{27}$
 
+
 \item\MauvaiseReponse $\frac{1024}{375}$
 
+
 \end{enumerate}
+
 
 
 
@@ -192,28 +252,38 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse croissante
+
 
 \item\BonneReponse décroissante
 
+
 \item\MauvaiseReponse constante
+
 
 \end{enumerate}
 
 
 \newpage
 
+
 \item On considère l'équation $4x^{2}-3 x-9=0$ alors le discriminant $\Delta$ est égal à :
 
 \begin{enumerate}
 
+
 \item\BonneReponse $153$
+
 
 \item\MauvaiseReponse $-135$
 
+
 \item\MauvaiseReponse $27$
 
+
 \end{enumerate}
+
 
 
 
@@ -221,13 +291,18 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $0$
+
 
 \item\BonneReponse $1$
 
+
 \item\MauvaiseReponse $2$
 
+
 \end{enumerate}
+
 
 
 
@@ -236,16 +311,22 @@
 
 \begin{enumerate}
 
+
 \item\MauvaiseReponse $\emptyset$
+
 
 \item\BonneReponse $\{5 ;-9\}$
 
+
 \item\MauvaiseReponse $\{5 ; 9\}$
 
-\end{enumerate}
-
-
 
 \end{enumerate}
+
+
+
+
+\end{enumerate}
+
 
 \end{document}
