--- a/Questions/BTS 1 - DST 1 - Sujet B.tex
+++ b/Questions/BTS 1 - DST 1 - Sujet B.tex
@@ -9,14 +9,17 @@
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{bbold}
+\usepackage{xcolor}
 \pagestyle{empty}
 
 \begin{document}
 
 \section*{Contrôle de Mathématiques}
 
-\let\MauvaiseReponse\null
-\let\BonneReponse\null
+%\let\MauvaiseReponse\null
+%\let\BonneReponse\null
+\def\MauvaiseReponse#1\par{\textcolor{red}{#1}}
+\def\BonneReponse#1\par{\textcolor{green}{#1}}
 
 {\bf Merci de répondre sur la grille fournie et de ne pas oublier de traiter les deux questions au verso en évitant de sortir des cadres. Vous prendrez soin de rendre le sujet avec cette grille.}
 \vspace{2em}
@@ -93,6 +96,7 @@
 \begin{enumerate}
 
 \item\BonneReponse est solution de l'équation $8x-1=0$
+
 \item\MauvaiseReponse est solution de l'équation $7x+1=0$
 
 
@@ -109,6 +113,7 @@
 \item\MauvaiseReponse $(6;4)$
 
 \item\BonneReponse $(-3 ;4)$
+
 \item\MauvaiseReponse $(2 ; -3)$
 
 
@@ -127,6 +132,7 @@
 
 
 \item\MauvaiseReponse $u_{3} =\frac{32}{9}$
+
 \item\BonneReponse $u_{3}=-\frac{22}{9}$
 
 \end{enumerate}
@@ -140,6 +146,7 @@
 \item\MauvaiseReponse $u_{3}=2$
 
 \item\BonneReponse $u_{3}=15$
+
 \item\MauvaiseReponse $u_{3}=6$
 
 
@@ -155,6 +162,7 @@
 
 
 \item\MauvaiseReponse $v_{2}=-5$
+
 \item\BonneReponse $v_{2}=2$
 
 \item\MauvaiseReponse $v_{2}=5$
@@ -170,6 +178,7 @@
 \item\MauvaiseReponse $u_{3}=-3$
 
 \item\BonneReponse $u_{3}=-\frac{9}{2}$
+
 \item\MauvaiseReponse $u_{3}=-4$
 
 
@@ -183,6 +192,7 @@
 
 
 \item\MauvaiseReponse $\frac{5}{512}$
+
 \item\BonneReponse $40$
 
 \item\MauvaiseReponse $\frac{128}{125}$
@@ -196,6 +206,7 @@
 \begin{enumerate}
 
 \item\BonneReponse décroissante
+
 \item\MauvaiseReponse croissante
 
 
@@ -212,6 +223,7 @@
 
 
 \item\MauvaiseReponse $-47$
+
 \item\BonneReponse $97$
 
 \item\MauvaiseReponse $11$
@@ -227,6 +239,7 @@
 
 
 \item\MauvaiseReponse $2$
+
 \item\BonneReponse $1$
 
 \end{enumerate}
@@ -238,6 +251,7 @@
 \begin{enumerate}
 
 \item\BonneReponse $\{4 ;-7\}$
+
 \item\MauvaiseReponse $\emptyset$
 
 
