--- a/Questions/BTS 1 - DST 1 - Sujet C.tex
+++ b/Questions/BTS 1 - DST 1 - Sujet C.tex
@@ -8,6 +8,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsfonts}
+\usepackage{xcolor}
 
 \pagestyle{empty}
 
@@ -16,8 +17,10 @@
 
 \section*{Contrôle de Mathématiques}
 
-\let\MauvaiseReponse\null
-\let\BonneReponse\null
+%\let\MauvaiseReponse\null
+%\let\BonneReponse\null
+\def\MauvaiseReponse#1\par{\textcolor{red}{#1}}
+\def\BonneReponse#1\par{\textcolor{green}{#1}}
 
 
 
@@ -37,6 +40,7 @@
 
 
 \item\MauvaiseReponse $]-\infty, \frac{1}{4}]$
+
 \item\BonneReponse $]-\frac{1}{4},+\infty[$
 
 \end{enumerate}
@@ -53,6 +57,7 @@
 \item\MauvaiseReponse $\mathbb{R}$
 
 \item\BonneReponse $]-\infty,\frac{1}{5}]$
+
 \item\MauvaiseReponse $[\frac{1}{5},+\infty[$
 
 
@@ -67,6 +72,7 @@
 \begin{enumerate}
 
 \item\MauvaiseReponse est solution de l'équation $4x+1=0$
+
 \item\BonneReponse est solution de l'inéquation $4x+5>0$
 
 \item\MauvaiseReponse est solution de l'équation $x+4=0$
@@ -81,6 +87,7 @@
 \begin{enumerate}
 
 \item\BonneReponse est solution de l'équation $x^{3}-7x=0$
+
 \item\MauvaiseReponse est solution de l'équation $x^{2}+7=0$
 
 
@@ -98,6 +105,7 @@
 
 
 \item\MauvaiseReponse est solution de l'inéquation $2x+3<0$
+
 \item\BonneReponse est solution de l'équation $10x-1=0$
 
 \end{enumerate}
@@ -110,6 +118,7 @@
 \item\MauvaiseReponse $(6;-3)$
 
 \item\BonneReponse $(-3 ;-3)$
+
 \item\MauvaiseReponse $(-\frac{3}{2} ; -3)$
 
 
@@ -130,6 +139,7 @@
 
 
 \item\MauvaiseReponse $u_{3} =\frac{77}{9}$
+
 \item\BonneReponse $u_{3}=-\frac{31}{9}$
 
 \end{enumerate}
@@ -140,6 +150,7 @@
 \begin{enumerate}
 
 \item\BonneReponse $u_{3}=313$
+
 \item\MauvaiseReponse $u_{3}=3$
 
 \item\MauvaiseReponse $u_{3}=63$
@@ -157,6 +168,7 @@
 \item\MauvaiseReponse $v_{2}=-6$
 
 \item\MauvaiseReponse $v_{2}=5$
+
 \item\BonneReponse $v_{2}=1$
 
 \end{enumerate}
@@ -168,6 +180,7 @@
 \begin{enumerate}
 
 \item\BonneReponse $u_{3}=-7$
+
 \item\MauvaiseReponse $u_{3}=-5$
 
 \item\MauvaiseReponse $u_{3}=-\frac{19}{3}$
@@ -185,6 +198,7 @@
 \item\MauvaiseReponse $\frac{4}{243}$
 
 \item\MauvaiseReponse $\frac{243}{64}$
+
 \item\BonneReponse $12$
 
 \end{enumerate}
@@ -201,6 +215,7 @@
 
 
 \item\MauvaiseReponse constante
+
 \item\BonneReponse décroissante
 
 \end{enumerate}
@@ -216,6 +231,7 @@
 \item\MauvaiseReponse $-80$
 
 \item\MauvaiseReponse $-28$
+
 \item\BonneReponse $208$
 
 \end{enumerate}
@@ -227,6 +243,7 @@
 \begin{enumerate}
 
 \item\BonneReponse $1$
+
 \item\MauvaiseReponse $0$
 
 
@@ -244,6 +261,7 @@
 
 
 \item\MauvaiseReponse $\{2 ; 9\}$
+
 \item\BonneReponse $\{2 ;-9\}$
 
 \end{enumerate}
