--- a/Questions/BTS 2 - DST 2 - Sujet original.tex
+++ b/Questions/BTS 2 - DST 2 - Sujet original.tex
@@ -25,7 +25,7 @@ a : 2,3,4,5,6,7
           - L'équation de la tangente $T$ à la courbe représentative $\mathscr C$ de $f$ en son point d'abscisse $0$ est donnée par $y=#b#x + #a*(b + 1)#  $.
 
         vrfx
-          + $T$ est au-dessus de  $\mathscr C$.
+          - $T$ est au-dessus de  $\mathscr C$.
 
           + $T$ est au-dessous de  $\mathscr C$.
 
@@ -109,4 +109,4 @@ p : 2,3,4
   
           -$#a#\cos\left(#2*p#\pi\right)$
   
-          -$#b#\sin\left(#2*p#\pi\right)$ 
+          -$#b#\sin\left(#2*p#\pi\right)$
